include_directories(
  ${Boost_INCLUDE_DIRS}
  ${PROJECT_SOURCE_DIR}/common/src
  ${PROJECT_SOURCE_DIR}/network/src
  ${PROJECT_SOURCE_DIR}/serializer/src
)

add_library(network
  ./src/utils/Config.cc
  ./src/utils/Utils.cc
  ./src/utils/Resolver.cc
  ./src/utils/CacheDns.cc
  ./src/base/Connection.cc
  ./src/base/Server.cc
  ./src/base/Client.cc
  ./src/base/ClientThreadManager.cc
  ./src/bip/Server.cc
  ./src/bip/Client.cc
  ./src/bip/Connection.cc
  ./src/http/Server.cc
  ./src/http/Connection.cc
  ./src/http/Request.cc
  ./src/http/Response.cc
  ./src/http/Template.cc
  ./src/http/Server.cc
  ./src/http/cpptempl.cc
)
